--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1312,6 +1312,7 @@ config TOUCHSCREEN_IQS5XX
 
 source "drivers/input/touchscreen/st/Kconfig"
 
+source "drivers/input/touchscreen/focaltech_spi/Kconfig"
 source "drivers/input/touchscreen/focaltech_touch/Kconfig"
 
 config TOUCHSCREEN_SYNAPTICS_TCM
