--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -203,6 +203,8 @@ source "drivers/input/rmi4/Kconfig"
 
 source "drivers/input/fingerprint/goodix_fod/Kconfig"
 
+source "drivers/input/fingerprint/fpc_tee/Kconfig"
+
 endif
 
 menu "Hardware I/O ports"
