techpack: audio: Import mius proximity driver from star

--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -41,6 +41,11 @@ LINUXINCLUDE    += \
                 -I$(srctree)/techpack/audio/include/uapi/audio \
                 -I$(srctree)/techpack/audio/include
 
+#for mius start
+LINUXINCLUDE    += \
+                -I$(srctree)/techpack/audio/include/mius
+#for mius end
+
 ifeq ($(CONFIG_QTI_QUIN_GVM), y)
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/gvmautoconf.h
