--- a/techpack/audio/config/lahainaauto.conf
+++ b/techpack/audio/config/lahainaauto.conf
@@ -40,3 +40,4 @@ export CONFIG_MSM_CSPL=y
 export CONFIG_SND_SWR_HAPTICS=m
 export CONFIG_DIGITAL_CDC_RSC_MGR=m
 export CONFIG_AUXPCM_DISABLE=m
+export CONFIG_MIUS_IIO=m
